--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div>
           <!-- 卡片群組 -->
-          <div class="card-group">
+          <div class="card-group mb-1">
             <div class="card mr-0 mb-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-1.png"
@@ -161,7 +161,7 @@
               /></a>
             </div>
 
-            <div class="card mr-0 mb-0">
+            <div class="card mr-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-5.png"
                 alt="card image"
@@ -180,7 +180,7 @@
               /></a>
             </div>
 
-            <div class="card mb-0">
+            <div class="card">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-6.png"
                 alt="card image"
