--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
           />
 
           <!--  手機 - LOGO 圖片     -->
-          <img
-            class="d-none logo-mb"
-            src="https://hexschool.github.io/webLayoutTraining1st/student-week1/logotype-sm-dark.svg"
-            alt="Sweetaste Logo"
-          />
+          <a href="#">
+            <img
+              class="d-none logo-mb"
+              src="https://hexschool.github.io/webLayoutTraining1st/student-week1/logotype-sm-dark.svg"
+              alt="Sweetaste Logo"
+            />
+          </a>
 
           <!--   桌機 - LOGO 圖片     -->
-          <img
-            class="logo"
-            src="https://hexschool.github.io/webLayoutTraining1st/student-week1/logo-all-dark.svg"
-            alt="Sweetaste Logo"
-          />
+          <a class="logo-link" href="#">
+            <img
+              class="logo"
+              src="https://hexschool.github.io/webLayoutTraining1st/student-week1/logo-all-dark.svg"
+              alt="Sweetaste Logo"
+            />
+          </a>
 
           <!--   桌機版 - 導覽列內容     -->
           <ul class="d-flex">
