--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <main class="d-flex">
         <!--  產品分類側欄    -->
         <nav class="mr-0">
+          <p class="list-group-title">甜點類別</p>
           <ul id="js-filter-products-btn" class="list-group">
-            <li class="list-group-title">甜點類別</li>
             <li class="list-group-item">
               <a href="#">所有甜點（48）</a>
             </li>
