--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
         <div>
           <!-- 卡片群組 -->
-          <div class="card-group mb-1">
-            <div class="card mr-0 mb-0">
+          <ul class="card-group mb-1">
+            <li class="card mr-0 mb-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-1.png"
                 alt="card image"
@@ -106,9 +106,9 @@
                   src="https://hexschool.github.io/webLayoutTraining1st/student-week1/favorite_border.png"
                   alt="favorite icon"
               /></a>
-            </div>
+            </li>
 
-            <div class="card mb-0">
+            <li class="card mb-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-2.png"
                 alt="card image"
@@ -125,9 +125,9 @@
                   src="https://hexschool.github.io/webLayoutTraining1st/student-week1/favorite_border.png"
                   alt="favorite icon"
               /></a>
-            </div>
+            </li>
 
-            <div class="card mr-0 mb-0">
+            <li class="card mr-0 mb-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-3.png"
                 alt="card image"
@@ -144,9 +144,9 @@
                   src="https://hexschool.github.io/webLayoutTraining1st/student-week1/favorite_border.png"
                   alt="favorite icon"
               /></a>
-            </div>
+            </li>
 
-            <div class="card mb-0">
+            <li class="card mb-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-4.png"
                 alt="card image"
@@ -163,9 +163,9 @@
                   src="https://hexschool.github.io/webLayoutTraining1st/student-week1/favorite_border.png"
                   alt="favorite icon"
               /></a>
-            </div>
+            </li>
 
-            <div class="card mr-0">
+            <li class="card mr-0">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-5.png"
                 alt="card image"
@@ -182,9 +182,9 @@
                   src="https://hexschool.github.io/webLayoutTraining1st/student-week1/favorite_border.png"
                   alt="favorite icon"
               /></a>
-            </div>
+            </li>
 
-            <div class="card">
+            <li class="card">
               <img
                 src="https://hexschool.github.io/webLayoutTraining1st/student-week1/p-6.png"
                 alt="card image"
@@ -201,8 +201,8 @@
                   src="https://hexschool.github.io/webLayoutTraining1st/student-week1/favorite_border.png"
                   alt="favorite icon"
               /></a>
-            </div>
-          </div>
+            </li>
+          </ul>
 
           <!--    Pagination    -->
           <ul class="pagination d-flex justify-content-end">
